corrected alignment of navbar and footer, modified text content

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .navbar-content {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline
 }
 .navbar-padding{
   padding: 4rem 8rem 0 8rem;
@@ -120,5 +120,10 @@
   column-gap: 2rem;
   @include respond(phone) {
     justify-content: space-between;
+  }
+}
+.copyright{
+  @include respond(phone) {
+  align-self: center;
   }
 }
